# veusz

./: .gitattributes  .gitignore  .gitmodules  .mypy.ini  .travis.yml  AUTHORS  ChangeLog  INSTALL  INSTALL.md  MANIFEST.in  README  README.md  VERSION  __init__.py  application.py  azure-pipelines.yml  embed.py  embed_remote.py  embed_tree.py  install_data.py  pyproject.toml  pyqt_setuptools.py  pyqtdistutils.py  qtall.py  requirements.txt  run_veusz  run_veusz_inplace  setup.cfg  setup.py  veusz.nsi  veusz.py  veusz_listen.py  veusz_main.py  veusz_pyinst.spec  veusz_windows_pyinst.spec  veusz_windows_setup.nsi  widgetfactory.py
Documents/: Makefile  document_api.py  generate_manual.sh  manual.css  manual.xml  veusz.pod  veusz_listen.pod  widget_doc.xsl
dialogs/: __init__.py  about.ui  aboutdialog.py  capture.ui  capturedialog.py  capturing.ui  custom.py  custom.ui  datacreate.py  datacreate.ui  datacreate2d.py  datacreate2d.ui  dataedit.ui  dataeditdialog.py  errorloading.py  errorloading.ui  exceptiondialog.py  exceptionlist.ui  exceptionsend.ui  histodata.py  histodata.ui  historycheck.py  historycombo.py  historygroupbox.py  historyspinbox.py  historyvaluecombo.py  import.ui  import_2d.ui  import_csv.ui  import_fits.ui  import_plugins.ui  import_standard.ui  importdialog.py  importfits.py  importhelp.ui  importhelpcsv.ui  plugin.py  plugin.ui  preferences.py  preferences.ui  (+11 more)
document/: __init__.py  capture.py  commandinterface.py  commandinterpreter.py  data.py  dataset_histo.py  datasets.py  dbusinterface.py  descriptor_parser.py  doc.py  emf_export.py  export.py  importparams.py  linked.py  mime.py  operations.py  painthelper.py  readcsv.py  selftest_export.py  simpleread.py  svg_export.py  widgetfactory.py
examples/: 2d_irregular.csv  2d_irregular.vsz  3d_bar.vsz  3d_errors.csv  3d_errors.vsz  3d_function.vsz  3d_points.vsz  3d_surface.vsz  3d_volume.vsz  FDR_example.vsz  FDR_sample_data.csv  axis-function.vsz  axis_function.vsz  axis_function_linked.vsz  bar_labels.eps  bar_labels.vsz  bar_options.vsz  barplots.vsz  boxplot.vsz  coloredpoints.vsz  contour.vsz  contour_labels.vsz  custom_definitions.vsz  dataset_operations.vsz  datebar.vsz  dsexpressions.vsz  embedexample.py  example_csv.csv  example_csv.eps  example_csv.vsz  example_import.vsz  example_import_2d.vsz  filtered.vsz  fixed_aspect.vsz  functions.eps  functions.vsz  hatching.vsz  histo.vsz  histo_widget.vsz  histogramming.vsz  (+25 more)
fitting/: marq.py
helpers/: __init__.py
icons/: LICENSE-icons
plugins/: __init__.py  datasetplugin.py  field.py  importplugin.py  operationplugin.py  test_plugin.py  toolsplugin.py  votable.py  workerplugin.py
qtwidgets/: __init__.py  datasetbrowser.py  historycheck.py  historycombo.py  historygroupbox.py  historyspinbox.py  historyvaluecombo.py  lineeditwithclear.py  (+1 more)
src/microtexbridge/: CMakeLists.txt  microtex_bridge.cpp
(+790 files in other folders)
