[metadata]
name = veusz
author = Jeremy Sanders
author_email = jeremy@jeremysanders.net
description = A scientific plotting package
long_description =
    Veusz is a 2D and 3D scientific plotting package, designed to
    create publication-ready PDF and SVG output. It features GUI,
    command-line, and scripting interfaces. Graphs are constructed from
    parts, allowing complex layouts to be designed. Veusz supports
    plotting functions, data with errors, keys, labels, stacked plots,
    multiple plots, and fitting data.
url = https://veusz.github.io/
version = file: VERSION
classifiers =
    Programming Language :: Python,
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Topic :: Scientific/Engineering :: Visualization
license = GPLv2+

[options]
include_package_data = True
python_requires >= 3.3
packages =
    veusz
    veusz.dataimport
    veusz.datasets
    veusz.dialogs
    veusz.document
    veusz.helpers
    veusz.plugins
    veusz.qtwidgets
    veusz.setting
    veusz.utils
    veusz.widgets
    veusz.windows
install_requires =
    numpy
    PyQt5

[options.extras_require]
fits = astropy; sampy
emf = pyemf3
fitting = iminuit
hdf5 = h5py

[options.entry_points]
gui_scripts =
    veusz = veusz.veusz_main:run
